# varmapack

./: .gitignore  .readthedocs.yaml  AGENTS.md  CLAUDE.md  DESCRIPTION  DEVELOPMENT.md  LICENSE  NAMESPACE  README.md  build.varmasim.R  codex-context.txt  current.txt  git-for-codex  load.varmasim.R  matlabcompare.txt  meson.build  meson_options.txt  notes.txt  plotseries.R  prufa.R  prufa.c  tinyARMAX.md  vyw-slicot-breakeven.txt
.obsidian/: workspace.json
R/: internal_wrappers.R  randompack.R  testcase.R  varma_sim.R
article/: .latexmkrc  readme (1).txt  readme (2).txt  readme.txt  snidmat.sty  varmapack.bib  varmapack.tex
article/Randompack.jl/: Manifest.toml  Project.toml
benchmark/: SummarizeBreakEven.awk  TimeBreakEven.c  TimeSetup.c  TimeVarmaSim.m  TimeVarmapack.c  TimeVarmasim.sh  meson.build
dev/: .Rprofile.keep  ACVF.c  ACVF.h  ExampleUtil.h  ExtraUtil.c  ExtraUtil.h  README  RunTests.c  RunVarmaSim.c  SCbuild.c  SCbuild.h  SpecRad.c  TestAgainstMatlab.c  TestExtraUtil.c  TestRandom.c  TestTestcase.c  TestVarSpecRad.c  TestVarmaSim.c  Tests.h  autocov.m  debugprint-demo.c  debugprint-demo.c.bak  matlabcompare.inc  matlabcompare.m  matlabcompare.txt  meson.build  meson_options.txt  prufa.R  prufa.c  release.R  rvs.c  testutilities.c  testutilities.h  util.R  vyw_prufa.R  xCheck.c  xCheck.h
examples/: RunCryptoRandom.c  RunVarmaSim.c  debugprint-demo.c  error_demo.c  getopt.c  getopt.h  meson.build  prufa.c  prufa_data.txt
matlab/: build_varmapack_mex.m  varmapack_acvf.m  varmapack_acvf_gateway.c  varmapack_autocov.m  varmapack_autocov_gateway.c  varmapack_sim.m  varmapack_sim_gateway.c  varmapack_specrad.m  varmapack_specrad_gateway.c  varmapack_testcase.m  varmapack_testcase_gateway.c
matlab-reference/: CC_build.m  S_build.m  W_build.m  ascertain.m  find_C.m  find_CG.m  find_Psi.m  find_W.m  flipmat.m  getdims.m  makecell.m  ref_companion_specrad.m  ref_varma_acvf.m  ref_varma_autocov.m  ref_varma_irf.m  ref_varma_ma_specrad.m  ref_varma_psi.m  ref_varma_sim.m  ref_varma_simx.m  ref_varma_specrad.m  ref_varma_testcase.m  ref_varma_testcasex.m  vyw_solve.m
matlab-reference/docs/: tiny-armax-moments.txt  varmax-startup-conditioning.txt
matlab-reference/test/: almostequal.m  assert_equal.m  run_reference_tests.m  test_ref_find_CG.m  test_ref_varma_sim.m  test_ref_varma_sim_first.m  test_ref_vyw.m  test_varmax.m
matlab-reference/tests/: run_reference_tests.m  test_ref_CC_build.m  test_ref_S_build.m  test_ref_acvf_autocov_specrad.m  test_ref_find_CG.m  test_ref_psi_irf.m  test_ref_varma_sim.m  test_ref_varma_sim_first.m  test_ref_varma_simx.m  test_ref_varma_simx_forward.m  test_ref_varma_simx_startup.m  test_ref_varma_testcase.m  test_ref_vyw.m  test_tinyARMAX.m  test_varmax.m
misc/old-r-dev/: README  autocov.m  vyw_prufa.R
python/: LICENSE  README.md  meson.build  meson_options.txt  pyproject.toml  varmax-prufa.ipynb
python/.ipynb_checkpoints/: varmax-prufa-checkpoint.ipynb
python/.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
python/.virtual_documents/: varmax-prufa.ipynb
python/docs/: Makefile  conf.py  index.rst  install.rst  math.rst  reference.rst  requirements.txt  rtd-install.sh  usage.rst
python/docs/_stubs/varmapack/: __init__.py
python/docs/_templates/: method.rst
python/docs/_templates/autosummary/: base.rst  class.rst
python/docs/reference/: index.rst
python/src/: FindW.c  Lyapunov.c  VYW.c  VarmaPackUtil.c  VarmaUtilities.h  blasref.h  error.h  sb03md-complete.f  sb03mdGateway.h  varmapack.h  varmapack_acvf.c  varmapack_sim.c  varmapack_simx.c
python/tests/: test_basic.py  test_errors.py  test_moments.py  test_sim_smoke.py  test_varmax.py
python/varmapack/: __init__.py  _core.pyx  meson.build
r-package/: .Rbuildignore  NAMESPACE
r-package/inst/: TimeMTS.R
r-package/man/: testcase.Rd  varma_sim.Rd
r-package/vignettes/: varmapack-intro.Rmd
scripts/: set_version.sh  syncpy.sh
src/: ACVF.c  BlasGateway.c  BlasGateway.h  BlasUpper.h  CCBuild.c  DebugUtil.c  DebugUtil.h  ExampleUtil.h  FindCGW.c  FindCGW_gateway.c  FindCG_gateway.c  IsStationary.c  Lyapunov.c  Lyapunov.h  Makevars  Omega.h  OmegaBuild.c  OmegaBuild_gateway.c  RandomNumbers.c  RandomNumbers.h  SBuild.c  SCbuild.h  SExtend.c  Testcase.c  Testcase.h  Testcase_gateway.c  VYW.c  VYW.h  VYWFactorize.c  VYWSolve.c  VYW_gateway.c  VarSpecRad.c  VarSpecRad.h  VarmaMisc.h  VarmaPackUtil.c  VarmaPackUtil.h  VarmaSim.c  VarmaSim.h  VarmaSim_gateway.c  VarmaUtilities.c  (+39 more)
src/clapack/: dlamch.c  f2c.h  meson.build  xerbla.c
src/r/: randompack_gateway.c
tests/: ExtraUtil.c  ExtraUtil.h  FromMatlab.c  FromMatlab.h  RunTests.c  S.txt  Sml.txt  TestAcvf.c  TestAgainstMatlab.c  TestAutocov.c  TestAutocovEdgeCases.c  TestCovar.c  TestError.c  TestExtraUtil.c  TestFindCFindG.c  TestFindCG.c  TestFromMatlab.c  TestLyapunov.c  TestPsdCondCov.c  TestPsi.c  TestRandom.c  TestRandomMvn.c  TestSimEdgeCases.c  TestSimxEdgeCases.c  TestTestcase.c  TestVarSpecRad.c  TestVarmaSim.c  TestVarmaSim.c.new  TestXAssert.c  Tests.h  bench_normals.m  mat2c.m  mat2file.m  matlabcompare-rolling.txt  matlabcompare.inc  matlabcompare.m  matlabcompare.txt  meson.build  xCheck.c  xCheck.h
tests/matlab/: DrawDemo.m  SmokeTest.m  build_randompack_mex.m  randompack_create.c  randompack_free.c  randompack_mex_common.h  randompack_mvn.c  randompack_normal.c  randompack_philox_set_key.c  randompack_seed.c  randompack_set_state.c  randompack_squares_set_key.c  randompack_u01.c
tests/testthat/: helper-testcase.R  helper-varmasim.R  test-omega-build.R  test-testcase.R  test-vyw.R
vignettes/: varmapack-intro.html  varmasim-intro.Rmd  varmasim-intro.html
